# pq-delphi

./: .gitignore  configure.ac
src/: .gitignore  Makefile.am  find.cpp  lcg.cpp  lcg.hpp  simulate.cpp  test.cpp
